--- a/Baha'i/Others/ROB/V3/p001-031Ch01.html
+++ b/Baha'i/Others/ROB/V3/p001-031Ch01.html
@@ -1,6 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- Covenant Library: \cl\Baha'i\Others\ROB\V3\p001-031Ch01.html -->
 
+<!-- Issues
+p. 16	   added paragraph separator in God Passes By quote to match the book itself
+
+-->
+
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 3, Chapter 1</title>
@@ -42,7 +47,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p1">1</a></center><p>
 	   <hr>
-	   1. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, p. 185.
+	   1. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para206">p. 185</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -195,7 +200,7 @@
 	   * see vol. 2, pp. <a href="../V2/p152-170Ch07.html#p169">169</a>, <a href="../V2/p397-421Ch19.html#p404">404</a>.<p>
 	   † see vol. 2, p. <a href="../V2/p194-221Ch09.html#p213">213</a>.<p>
 	   <hr>
-	   5. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, p. 184.
+	   5. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para204">p. 184</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -221,13 +226,14 @@
 </tr>
 <tr>
        <td>
-	   <blockquote>utter His voice from Jerusalem; and the habitations of the shepherds shall mourn, and the top of Carmel shall wither.' 'Akká, itself, flanked by the 'glory of Lebanon,' and lying in full view of the 'splendour of Carmel,' at the foot of the hills which enclose the home of Jesus Christ Himself, had been described by David as 'the Strong City,' designated by Hosea as 'a door of hope,' and allude to by Ezekiel as 'the gate that looketh towards the East,' whereunto 'the glory of the God of Israel came from the way of the East,' His voice 'like a noise of many waters.' To it the Arabian Prophet had referred as 'a city in Syria to which God hath shown His special mercy,' situated 'betwixt two mountains...in the middle of a meadow,' 'by the shore of the sea...suspended beneath the Throne,' 'white, whose whiteness is pleasing unto God.' 'Blessed the man,' He, moreover, as confirmed by Bahá'u'lláh, had declared, 'that hath visited 'Akká, and blessed he that hath visited the visitor of 'Akká.' Furthermore, 'He that raiseth therein the call to prayer, his voice will be lifted up unto Paradise.' And again: 'The poor of 'Akká are the kings of Paradise and the princes thereof. A month in 'Akká is better than a thousand years elsewhere,' Moreover, in a remarkable tradition, which is contained in Shaykh Ibnu'l-'Arabí's work, entitled 'Futúhát-i-Makkíyyih,' and which is recognized as an authentic utterance of Muhammad, and is quoted by Mírzá Abu'l-Fadl in his 'Fará'id,' this significant prediction has been made: 'All of them (the companions of the Qá'im) shall be slain except One Who shall reach the plain of 'Akká, the Banquet-Hall of God.' <small><sup>6</sup></small></blockquote>
+	   <blockquote>utter His voice from Jerusalem; and the habitations of the shepherds shall mourn, and the top of Carmel shall wither.' <p>
+	   'Akká, itself, flanked by the 'glory of Lebanon,' and lying in full view of the 'splendour of Carmel,' at the foot of the hills which enclose the home of Jesus Christ Himself, had been described by David as 'the Strong City,' designated by Hosea as 'a door of hope,' and allude to by Ezekiel as 'the gate that looketh towards the East,' whereunto 'the glory of the God of Israel came from the way of the East,' His voice 'like a noise of many waters.' To it the Arabian Prophet had referred as 'a city in Syria to which God hath shown His special mercy,' situated 'betwixt two mountains...in the middle of a meadow,' 'by the shore of the sea...suspended beneath the Throne,' 'white, whose whiteness is pleasing unto God.' 'Blessed the man,' He, moreover, as confirmed by Bahá'u'lláh, had declared, 'that hath visited 'Akká, and blessed he that hath visited the visitor of 'Akká.' Furthermore, 'He that raiseth therein the call to prayer, his voice will be lifted up unto Paradise.' And again: 'The poor of 'Akká are the kings of Paradise and the princes thereof. A month in 'Akká is better than a thousand years elsewhere,' Moreover, in a remarkable tradition, which is contained in Shaykh Ibnu'l-'Arabí's work, entitled 'Futúhát-i-Makkíyyih,' and which is recognized as an authentic utterance of Muhammad, and is quoted by Mírzá Abu'l-Fadl in his 'Fará'id,' this significant prediction has been made: 'All of them (the companions of the Qá'im) shall be slain except One Who shall reach the plain of 'Akká, the Banquet-Hall of God.' <small><sup>6</sup></small></blockquote>
 	   Bahá'u'lláh and His party entered the prison city through the sea gate and were conducted along the narrow and twisting roads of 'Akká to the barracks. The hardships of the long and arduous journey from Adrianople to 'Akká in the burning heat of the midsummer season, with inadequate and primitive facilities on board the ships crowded by so many, had exhausted everyone. And now added to all this were the appalling conditions of their confinement in the barracks,
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p16">16</a></center><p>
 	   <hr>
-	   6. <i>God Passes By</i>, pp. 183-4.
+	   6. <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#p183">183</a>-4.
 	   </small></td>
 </tr>
 <tr>
@@ -295,7 +301,7 @@
 	   * see vol. 2, <a href="../V2/p337-369Ch16.html">ch. 16</a>.<p>
 	   † see below, p. <a href="p087-107Ch05.html#p91">91</a><p>
 	   <hr>
-	   10. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 186.<p>
+	   10. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para208">p. 186</a>.<p>
 	   11. Unpublished Tablet of Bahá'u'lláh.
 	   </small></td>
 </tr>
