--- a/Baha'i/Others/ROB/V3/p032-051Ch02.html
+++ b/Baha'i/Others/ROB/V3/p032-051Ch02.html
@@ -62,6 +62,8 @@
 	   <hr>
 	   3. Unpublished Tablet of Bahá'u'lláh.<p>
 	   4. Unpublished Tablet of Bahá'u'lláh.
+	   <hr>
+	   [Lawh-i-Ra'ís] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para194">p. 180</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para210">p. 187</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para322">p. 231</a>
 	   </small></td>
 </tr>
 <tr>
@@ -324,7 +326,7 @@
        <td VALIGN=top><small><center><a name="p50">50</a></center><p>
 	   * see ch. <a href="p308-321Ch14.html">14</a>.<p>
 	   <hr>
-	   13. <i>God Passes By</i>, p. 324.<p>
+	   13. <i>God Passes By</i>, <a href="../../../SE/GPB/p321-401FourthPeriod.html#para5">p. 324</a>.<p>
 	   14. <i>Will and Testament</i>.
 	   </small></td>
 </tr>
