--- a/Baha'i/Others/ROB/V3/p073-086Ch04.html
+++ b/Baha'i/Others/ROB/V3/p073-086Ch04.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p052-072Ch03.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p087-107Ch05.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -72,7 +72,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p75">75</a></center><p>
-	   * see pp. <a href="p174-203Ch09.html#p182">182</a>-3 below.<p>
+	   * see pp. <a href="p174-203Ch09.html#p182">182</a>-3 below.<p> 
 	   † see <a href="p422-432Apndx_I.html">Appendix I</a>.<p>
 	   </small></td>
 </tr>
@@ -106,7 +106,7 @@
 	   This is because the animal characteristics are part of his nature and without any effort on his part will drive him towards the material world. When this happens, man may behave in a manner even worse than an animal.<p>
 	   But the development of spiritual qualities is not controlled by nature. Although the soul aspires to spiritual things, the acquiring of spiritual qualities depends upon effort. It is in this domain that man has been given free will. This is very similar to a bird which in flight must use its wings to counteract the force of gravity. If it fails to do this, it will be pulled down instantly by this force.<p>
 	   The subduing of the animal nature through the ascendancy of the spiritual powers latent within man is the essence of detachment spoken of by Bahá'u'lláh in many of His Tablets. We have already discussed this theme in previous volumes and explained that by detachment is not meant poverty or the living of the life of a mendicant or an ascetic. To become careless of one's personal interests or the affairs of the world is contrary to the teachings of Bahá'u'lláh. Indeed, one may possess the things of this world and its riches and yet remain detached.*<p>
-	   To the extent that man can dominate his lower nature will he
+	   To the extent that man can dominate his lower nature will he 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p78">78</a></center><p>
@@ -128,7 +128,7 @@
        <td>
 	   The motive for contribution by the believers to the Huqúq'u'lláh or the Bahá'í Funds, whether in the days of Bahá'u'lláh or in any other time, has been and always will be their love for Bahá'u'lláh and His Cause. It is the love of the individual for Him that endows the offering, no matter how small, with a celestial potency through which the Cause of God can be propelled forward. This is why the privilege of giving to the Bahá'í Fund is exclusively vouchsafed to the believers. For the promotion of the Cause of God, whether through teaching or contributing to the Bahá'í Funds, is dependent upon devotion to Bahá'u'lláh and the performance of stainless deeds by the believers. These two factors bring victory to the Cause.<p>
 	   During the days of Bahá'u'lláh, the majority of the believers in Persia were poor, and some needy. But when Hájí Amín visited them, they had set aside through sacrifice small sums of money and were able to offer them for the Cause of God. It must be made clear that under Bahá'u'lláh's supervision the funds were spent for the promotion of the Cause, and very little, if any, for His own expenses or those of His companions. The history of the life of Bahá'u'lláh bears ample testimony to this fact. For during the forty years of His ministry He lived for the most part in the utmost poverty. There were days when a mere loaf of bread was not available to Him, and the garments He wore were the only clothes He had. The last few years of His earthly life, although relatively more comfortable, were nevertheless greatly influenced by the austerity that had characterized His life since the days of the Síyáh-Chál in Tihrán, when all His possessions had been confiscated and He had been deprived of the means to support Himself and His Family.*<p>
-	   Desire for wealth is non-existent in the person of the Manifestation of God. He abides in a realm which is independent of all creation. And he is detached from all earthly things. Bahá'u'lláh has stated in many of His Tablets that this
+	   Desire for wealth is non-existent in the person of the Manifestation of God. He abides in a realm which is independent of all creation. And he is detached from all earthly things. Bahá'u'lláh has stated in many of His Tablets that this 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p80">80</a></center><p>
@@ -146,7 +146,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p81">81</a></center><p>
 	   <hr>
-	   2. <i>The Proclamation of Bahá'u'lláh</i>, p. 22.<p>
+	   2. <i>The Proclamation of Bahá'u'lláh</i>, p. 22.<p> 
 	   3. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#p217">p. 219</a>.
 	   </small></td>
 </tr>
@@ -216,7 +216,9 @@
 	   In appreciation of Hájí Amín's services, 'Abdu'l-Bahá named one of the doors of the Shrine of the Báb after him.<p>
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p86">86</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p86">86</a></center><p>
+	   5. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para251">p. 83</a>.
+	   </small></td>
 </tr>
 </table>
 
@@ -225,7 +227,7 @@
        <td>
 	   	   <FORM ACTION="p052-072Ch03.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -233,12 +235,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p087-107Ch05.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
