--- a/Baha'i/Others/ROB/V3/p087-107Ch05.html
+++ b/Baha'i/Others/ROB/V3/p087-107Ch05.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p073-086Ch04.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p108-132Ch06.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -45,6 +45,8 @@
 	   † Sultán 'Abdu'l-'Azíz.<p>
 	   <hr>
 	   1. Quoted by Shoghi Effendi, <i>The Promised Day is Come</i>, p. 63
+	   <hr>
+	   [Lawh-i-Fu'ád] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para263">p. 208</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para306">p. 225</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para322">p. 231</a>
 	   </small></td>
 </tr>
 <tr>
@@ -65,12 +67,12 @@
        <td>
 	   clear and unmistakable. In AH 1283 (AD 1866-67) he wrote a treatise in Arabic denouncing Mírzá Yahyá's rebellion, refuting his arguments and demonstrating his claims to be utterly false. Bahá'u'lláh refers to this treatise in the <i>Lawh-i-Siráj</i>* and states that God had inspired Shaykh Kázim in writing it. It is reported that Bahá'u'lláh conferred the title of Samandar† upon Shaykh Kázim after the writing of this challenging treatise.<p>
 	   In His Tablets Bahá'u'lláh often commends those who refute the arguments of the enemies of the Faith. In the Tablet of Salmán‡ He exhorts His followers in these words:<p>
-	   <blockquote>Warn, O Salmán, the beloved of the one true God, not to view with too critical an eye the sayings and writings of men. Let them rather approach such sayings and writings in a spirit of open-mindedness and loving sympathy. Those men, however, who, in this Day, have been led to assail, in their inflammatory writings, the tenets of the Cause of God, are to be treated differently. It is incumbent upon all men, each according to his ability, to refute the arguments of those that have attacked the Faith of God. Thus hath it been decreed by Him Who is the All-Powerful, the Almighty. He that wisheth to promote the Cause of the one true God, let him promote it through his pen and tongue, rather than have recourse to sword or violence. We have, on a previous occasion, revealed this injunction, and We now confirm it, if ye be of them that comprehend. By the righteousness of Him Who, in this Day, crieth within the inmost heart of all created things: 'God, there is none other God besides Me!' If any man were to arise to defend, in his writings, the Cause of God against its assailants, such a man, however inconsiderable his share, shall be so honoured in the world to come that the Concourse on high would envy his glory. No pen can depict the loftiness of his station, neither can any tongue describe its splendour. For whosoever standeth</blockquote>
+	   <blockquote>Warn, O Salmán, the beloved of the one true God, not to view with too critical an eye the sayings and writings of men. Let them rather approach such sayings and writings in a spirit of open-mindedness and loving sympathy. Those men, however, who, in this Day, have been led to assail, in their inflammatory writings, the tenets of the Cause of God, are to be treated differently. It is incumbent upon all men, each according to his ability, to refute the arguments of those that have attacked the Faith of God. Thus hath it been decreed by Him Who is the All-Powerful, the Almighty. He that wisheth to promote the Cause of the one true God, let him promote it through his pen and tongue, rather than have recourse to sword or violence. We have, on a previous occasion, revealed this injunction, and We now confirm it, if ye be of them that comprehend. By the righteousness of Him Who, in this Day, crieth within the inmost heart of all created things: 'God, there is none other God besides Me!' If any man were to arise to defend, in his writings, the Cause of God against its assailants, such a man, however inconsiderable his share, shall be so honoured in the world to come that the Concourse on high would envy his glory. No pen can depict the loftiness of his station, neither can any tongue describe its splendour. For whosoever standeth</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p89">89</a></center><p>
 	   * see vol. 2, p. <a href="../V2/p236-269Ch11.html#p262">262</a>.<p>
-	   † A legendary bird supposed to live in fire.<p>
+	   † A legendary bird supposed to live in fire.<p> 
 	   ‡ see vol. 2, <a href="../V2/p283-290Ch13.html">ch. 13</a>.
 	   </small></td>
 </tr>
@@ -79,7 +81,7 @@
 	   <blockquote>firm and steadfast in this holy, this glorious, and exalted Revelation, such power shall be given him as to enable him to face and withstand all that is in heaven and earth. Of this God is Himself a witness.<small><sup>2</sup></small></blockquote>
 	   Shaykh Kázim-i-Samandar was an outstanding teacher of the Faith. Many early believers of Qazvín in particular owe their allegiance to the Cause to his indefatigable labours in propagating the Message of Bahá'u'lláh. His enthusiasm and faith, his zeal and devotion, deeply affected the hearts of his listeners and made them attentive to the Call of God in this age. He also played an important part in defending the Cause of God from the misrepresentations of the followers of Mírzá Yahyá and those who at a later date during the ministry of 'Abdu'l-Bahá were misled by Mírzá Muhammad-'Alí,* the Arch-Breaker of the Covenant of Bahá'u'lláh. The believers in Qazvín, who from the early days of the Faith were affected by the spirit of division, of controversy and Covenant-breaking, were greatly helped by the presence of Shaykh Kázim in their midst. Mainly through his steadfastness and perseverance, the community was transformed.<p>
 	   Shaykh Kázim paid special attention to the education and upbringing of his children. A certain Mullá 'Alí entitled 'Mu'allim' (teacher) whom he had converted to the Faith and who was a man of learning, took up residence in the house and volunteered the work of educating the children.† This he did after reading Bahá'u'lláh's exhortation in the <i>Kitáb-i-Aqdas</i>:<p>
-	   <blockquote>Unto every father hath been enjoined the instruction of his son and daughter in the art of reading and writing and in all that hath been laid down in the Holy Tablet. He that putteth away that which is commanded unto him, the Trustees are then to take from him that which is required for their instruction, if he be wealthy, and if not the matter devolveth</blockquote>
+	   <blockquote>Unto every father hath been enjoined the instruction of his son and daughter in the art of reading and writing and in all that hath been laid down in the Holy Tablet. He that putteth away that which is commanded unto him, the Trustees are then to take from him that which is required for their instruction, if he be wealthy, and if not the matter devolveth</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p90">90</a></center><p>
@@ -201,7 +203,7 @@
 	   </td>
 	   <td>
        	   <hr>
-	   </td>
+	   </td>		   	  
    </tr>
    <tr>
        <td valign="top">
@@ -236,7 +238,7 @@
 	   When Mírzá Abu'l-Fadl arrived for this meeting he found himself again confronted with uneducated people. In the course of discussion he was utterly confounded by the simple yet brilliant proofs which were put forward in support of the Faith and in answer to his questions. He marvelled at these men who were devoid of learning and knowledge yet possessed such a marvellous understanding of the mysteries of the Qur'án and other Holy Books.<p>
 	   In the course of several meetings, discussions between Mírzá Abu'l-Fadl and his unschooled Bahá'í teachers continued. As anticipated by his host, these discussions had a sobering effect on Mírzá Abu'l-Fadl. Since his prime motive in coming to Bahá'í meetings was to disclose the absurdity of the claims of the Bahá'ís, he was remarkably humbled by his inability to refute the arguments presented by those few uneducated souls from among the believers, and his pride was badly hurt by the many humiliating defeats he encountered in the course of discussions with them. Later he met with learned Bahá'ís and conversed with them in numerous gatherings, always finding their arguments irrefutable. Once he entered into discussion with the renowned Mullá Muhammad-i-Qá'iní (Nabíl-i-Akbar).* At the end of that meeting he is reported to have exclaimed in an astonished tone: 'By God! No one could ever be found capable of withstanding the force of argument of this great man of knowledge.'<p>
 	   In one of his writings, Mírzá Abu'l-Fadl describes his early days of contact with the Faith in these words:<p>
-	   <blockquote>In the year AH 1293 (AD 1876) when the writer of these pages [i.e. Mírzá Abu'l-Fadl] was a resident of Tihrán and steadfast in the faith of Shí'ah Islám, through some incidents he established association with the people of Bahá. The</blockquote>
+	   <blockquote>In the year AH 1293 (AD 1876) when the writer of these pages [i.e. Mírzá Abu'l-Fadl] was a resident of Tihrán and steadfast in the faith of Shí'ah Islám, through some incidents he established association with the people of Bahá. The</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p97">97</a></center><p>
@@ -279,7 +281,7 @@
 	   Then I came to these exalted words: 'Soon will We dismiss the one who was like unto him, and will lay hand on their Chief* who ruleth the land, and I, verily, am the Almighty, the All-Compelling.'†<p>
 	   Upon reading this statement I was awe-struck, and plunged into a state of astonishment and wonder. For about half an hour I became speechless. Immersed in my thoughts, I wondered whether it was great magic or sorcery, and certainly it provided a grave test for me.<p>
 	   Eventually I was satisfied in my thoughts that we were entering the 'time of the end' and not until Godlessness spread would the Promised One come. I contended that Bahá'u'lláh had made these statements and prophecies in order to mislead ordinary people and keep a hold on His followers. Otherwise it would not be possible for a person who was a prisoner by the order of a King to address him in such strong language and denounce him in such wrathful terms, especially when He was single and alone, without a helper in a foreign land...These vain imaginings and satanic thoughts were flooding my mind and yet I praise God and thank Him for his loving grace that I was never inclined to dislike Bahá'u'lláh or be discourteous to Him.<p>
-	   ...Anyhow, in order to rescue myself from 'Abdu'l-Karím, I said to him...'To possess the power of life over created things is a miracle the like of which has not been manifested by the Prophets of past'...Therefore I took back the sealed envelope and my blank letter addressed to
+	   ...Anyhow, in order to rescue myself from 'Abdu'l-Karím, I said to him...'To possess the power of life over created things is a miracle the like of which has not been manifested by the Prophets of past'...Therefore I took back the sealed envelope and my blank letter addressed to 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -322,7 +324,7 @@
 	   <blockquote>
 	   admonish myself in these words: 'It is about one year that you have been associating and arguing with these Bahá'ís. These men are illiterate and uneducated, yet they have asserted their ascendancy over you every time, they have adduced proofs and demonstrated the validity of their Cause. Although you consider yourself to be a learned man and a researcher in the Holy Books, commentaries and traditions, yet you know that these men are much more resourceful than you are. It is as if they are inspired and assisted by God, and the Holy Spirit speaks through them. You have also been a witness to their exalted character and heavenly virtues. Why then should you interpret their words as the breathings of the evil whisperer? You remember how enchanted you were when you read the story of the 'Show of Sultán Salím' in the <i>Lawh-i-Ra'ís</i>! How you were attracted by the eloquence and sublimity of those words! Now, you ought to read and investigate the writings of the one who claims to be the revealer of the Word of God with the eye of justice and fairness. If this Cause be untrue, the first to contend it is God. Therefore, its survival is impossible...<p>
 	   I arose, performed my ablutions and said prayers. I then took the Tablet of Bahá'u'lláh [<i>Lawh-i-Ra'ís</i>] which, although it had been in my possession for a long time, I had not been moved to read. I opened it, turned tearfully and with devotion to God, and began to read it. It was then that I heard the voice of God...calling me through the mouthpiece of this Manifestation, 'Am I not your Lord?' To that call reaching me from the Beauty of the All-Glorious, I responded with all my heart, 'Thou art, thou art!'* I believed.<p>
-	   I passed from the state of idle fancies and vain imaginings into that of certitude...I became highly attracted to the Word of God and carried away by its power. I felt such love and devotion towards the Dayspring of Divine Revelation [Bahá'u'lláh] and experienced such joy and ecstasy in myself that I cannot ever describe it. Words cannot express the
+	   I passed from the state of idle fancies and vain imaginings into that of certitude...I became highly attracted to the Word of God and carried away by its power. I felt such love and devotion towards the Dayspring of Divine Revelation [Bahá'u'lláh] and experienced such joy and ecstasy in myself that I cannot ever describe it. Words cannot express the 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -398,7 +400,7 @@
        <td>
 	   	   <FORM ACTION="p073-086Ch04.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -406,12 +408,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p108-132Ch06.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
