--- a/Baha'i/Others/ROB/V3/p108-132Ch06.html
+++ b/Baha'i/Others/ROB/V3/p108-132Ch06.html
@@ -70,7 +70,7 @@
        <td VALIGN=top><small><center><a name="p110">110</a></center><p>
 	   * see vol. 2, p. <a href="../V2/p337-369Ch16.html#p368">368</a>.<p>
 	   <hr>
-	   1. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 212.
+	   1. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para275">p. 212</a>.
 	   </small></td>
 </tr>
 <tr>
