--- a/Baha'i/Others/ROB/V3/p133-146Ch07.html
+++ b/Baha'i/Others/ROB/V3/p133-146Ch07.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p108-132Ch06.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p147-173Ch08.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -44,6 +44,8 @@
 	   <hr>
 	   1. Quoted by Shoghi Effendi, <i>The Promised Day Is Come</i>, pp. 47-8.<p>
 	   2. Quoted by Fádil-i-Mázindarání, <i>Asráru'l-Áthár</i>, vol. 5, p. 277.
+	   <hr>
+	   [Súriy-i-Haykal] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para30">p. 101</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para275">p. 213</a>, <a href="../../../SE/GPB/p321-401FourthPeriod.html#para123">p. 383</a>
 	   </small></td>
 </tr>
 <tr>
@@ -60,7 +62,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p134">134</a></center><p>
 	   <hr>
-	   3. Quoted by Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', <i>The World Order of Bahá'u'lláh</i>, p. 109.<p>
+	   3. Quoted by Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', <i>The World Order of Bahá'u'lláh</i>, p. 109.<p> 
 	   4. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para62">XIV, 16</a>.
 	   </small></td>
 </tr>
@@ -130,7 +132,7 @@
 	   Indeed, as the believers play their part in the propagation and consolidation of the Cause of Bahá'u'lláh, God provides the means for its progress and eventual establishment as a world religion for all mankind. Both the constructive and destructive forces in the world assist in its promotion. The process of the breaking up of the old order is in itself a positive step, paving the way for the spreading of the new.<p>
 	   On the other hand, through the transforming power of the Revelation of Bahá'u'lláh, God is creating a new race of men who arise to champion His Cause. Through the sacrificial outpourings of their substance and resources, they attract the spiritual forces which together with all the material aids sent down by Providence, propel the Cause of God forward.<p>
 	   Bahá'u'lláh in the <i>Súriy-i-Haykal</i> rebukes the people of the Bayán* for their blindness to His Revelation in spite of the fact that the Báb had nurtured and prepared them for His Coming. He identifies Himself with the Báb in the <i>Súriy-i-Haykal</i> when He addresses the Bábís:<p>
-	   <blockquote>Had the Primal Point (The Báb) been someone else beside Me as ye claim, and had attained My presence, verily He</blockquote>
+	   <blockquote>Had the Primal Point (The Báb) been someone else beside Me as ye claim, and had attained My presence, verily He</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p140">140</a></center><p>
@@ -167,7 +169,7 @@
 	   * According to the text of the <i>Kitáb-i-Aqdas</i> (Bahá'u'lláh's Most Holy Book) the next Manifestation of God will not appear before the lapse of at least a thousand years.<p>
 	   † see <i>Dispensation</i>, p. 117.
 	   <hr>
-	   10. Quoted by Shoghi Effendi, 'Dispensation', <i>idem</i>, p. 117.<p>
+	   10. Quoted by Shoghi Effendi, 'Dispensation', <i>idem</i>, p. 117.<p> 
 	   11. <i>ibid</i>.<p>
 	   <hr>
 	   [next manifestation] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para37">&para;37</a>
@@ -178,14 +180,14 @@
 	   <blockquote>of My Cause, with manifest and undoubted sovereignty, inasmuch as they will not welcome His appearance, will repudiate His signs, will dispute His sovereignty, will contend with Him, and will betray His Cause...<small><sup>12</sup></small></blockquote>
 	   In the Writings of Bahá'u'lláh there are references to the symbolic appearance of the Maid of Heaven to Him.* In the <i>Súriy-i-Haykal</i> He describes in a fascinating manner the proclamation of His mission by the Maiden symbolizing the 'Most Great Spirit' which animated Him throughout His Ministry. This is how He reveals the descent of this mysterious Spirit upon Himself:<p>
 	   <blockquote>While engulfed in tribulations I heard a most wondrous, a most sweet voice, calling above My head. Turning My face, I beheld a Maiden--the embodiment of the remembrance of the name of My Lord--suspended in the air before Me. So rejoiced was she in her very soul that her countenance shone with the ornament of the good-pleasure of God, and her cheeks glowed with the brightness of the All-Merciful. Betwixt earth and heaven she was raising a call which captivated the hearts and minds of men. She was imparting to both My inward and outer being tidings which rejoiced My soul, and the souls of God's honoured servants. Pointing with her finger unto My head, she addressed all who are in heaven and all who are on earth, saying: 'By God! This is the Best-Beloved of the worlds, and yet ye comprehend not. This is the Beauty of God amongst you, and the power of His sovereignty within you, could ye but understand. This is the Mystery of God and His Treasure, the Cause of God and His glory unto all who are in the kingdoms of Revelation and of creation, if ye be of them that perceive.' <small><sup>13</sup></small></blockquote>
-	   It is impossible for man to understand the nature of the Manifestations of God and the spirit which motivates them. Just as it is impossible for a creature in the animal kingdom to
+	   It is impossible for man to understand the nature of the Manifestations of God and the spirit which motivates them. Just as it is impossible for a creature in the animal kingdom to 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p143">143</a></center><p>
 	   * see <a href="../V1/p351-363Index.html#MaidofHeaven">vol. 1</a>.<p>
 	   <hr>
-	   12. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 250.<p>
-	   13. <i>ibid</i>. pp. 101-2.
+	   12. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para30">p. 250</a>.<p> 
+	   13. <i>ibid</i>. pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para30">101</a>-2.
 	   </small></td>
 </tr>
 <tr>
@@ -236,7 +238,7 @@
        <td>
 	   	   <FORM ACTION="p108-132Ch06.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -244,12 +246,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p147-173Ch08.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
