--- a/Baha'i/Others/ROB/V3/p204-220Ch10.html
+++ b/Baha'i/Others/ROB/V3/p204-220Ch10.html
@@ -172,7 +172,7 @@
        <td VALIGN=top><small><center><a name="p211">211</a></center><p>
 	   * see <a href="p442-448Apndx_III.html">Appendix III</a>.<p>
 	   <hr>
-	   4. <i>God Passes By</i>, p. 188.<p>
+	   4. <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para213">p. 188</a>.<p>
 	   5. Letter to the believers in the East, 25 December 1939.
 	   </small></td>
 </tr>
@@ -195,7 +195,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p213">213</a></center><p>
-	   * For further information see <i>God Passes By</i>, pp. 389-95.<p>
+	   * For further information see <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p321-401FourthPeriod.html#para137">389</a>-95.<p>
 	   † see vol. 2, p. <a href="../V2/p065-106Ch04.html#p94">94</a>.<p>
 	   <hr>
 	   6. Letter to the believers in the East, Ridván 89 (= April 1933).<p>
