--- a/Baha'i/Others/ROB/V3/p221-252Ch11.html
+++ b/Baha'i/Others/ROB/V3/p221-252Ch11.html
@@ -63,6 +63,9 @@
        <td VALIGN=top><small><center><a name="p223">223</a></center><p>
 	   * see vol. 1, p. <a href="../V1/p105-152Ch09.html#p125">125</a>.<p>
 	   † The birth of the Báb and Bahá'u'lláh are celebrated in the East according to the lunar calendar.
+	   <hr>
+	   <hr>
+	   [Lawh-i-Ru'yá] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para297">p. 221</a>
 	   </small></td>
 </tr>
 <tr>
@@ -344,7 +347,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p238">238</a></center><p>
 	   <hr>
-	   8. <i>God Passes By</i>, pp. 189-91.
+	   8. <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para216">189</a>-91.
 	   </small></td>
 </tr>
 <tr>
@@ -380,7 +383,10 @@
 	   In contrast to the writings of Shoghi Effendi, one who had truly understood the station of Bahá'u'lláh and was in a position to explain His actions, we come across the writings of those who had very little knowledge of the Faith and have left behind much erroneous information. How can a man who is
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p241">241</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p241">241</a></center><p></small>
+	   <hr>
+	   <a href="../../../SE/GPB/Cover.html"><i>God Passes By</i></a>
+	   </td>
 </tr>
 <tr>
        <td>
