--- a/Baha'i/Others/ROB/V3/p253-274Ch12.html
+++ b/Baha'i/Others/ROB/V3/p253-274Ch12.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p221-252Ch11.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p275-307Ch13.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -50,7 +50,7 @@
 	   meeting the Báb several times in the city of Karbilá prior to His declaration. He had been deeply impressed by the radiance and gentleness mingled with majesty which the youthful Báb evinced as He prayed most tearfully at the Shrine of Imám Husayn. Ismu'lláhu'l-Asdaq is reported to have exclaimed when his eyes first fell on Him, 'Glorified be our Lord, the Most High!' He had become a devoted admirer of that Youth while in Karbilá, in spite of the fact that the Ismu'lláh was a learned divine, one who was held in high esteem by the people, while the Báb was a youth with little education. He had also witnessed the extraordinary reverence shown to that Youth by Siyyid Kázim-i-Rashtí,* the celebrated leader of the Shaykhí community, who knew that He was none other than the Qá'im Himself, the Promised One of Islám.<p>
 	   Soon after the Declaration of the Báb in 1844, when Mullá Husayn was on his way to Tihrán, he met Ismu'lláhu'l-Asdaq in the city of Isfahán, informed him of the advent of the Báb and gave him some of His Writings to read. Upon reading a few pages he became an ardent believer. But Mullá Husayn, as bidden by the Báb, was not allowed to reveal the identity of the Báb as yet.<p>
 	   In his narratives, Nabíl-i-A'zam records the circumstances in which the Ismu'lláh became an ardent believer:<p>
-	   <blockquote>Mullá Sádiq-Khurásání, formerly known as Muqaddas, and surnamed by Bahá'u'lláh, Ismu'lláhu'l-Asdaq, who according to the instructions of Siyyid Kázim, had during the last five years been residing in Isfahán and had been preparing the way for the advent of the new Revelation, was also among the first believers who identified themselves with the Message proclaimed by the Báb. As soon as he learned of the arrival of Mullá Husayn in Isfahán, he hastened to meet him. He gives the following account of his first interview, which took place at night in the home of Mírzá Muhammad-'Alíy-i-Nahrí: 'I asked Mullá Husayn to divulge the name of Him who claimed to be the promised</blockquote>
+	   <blockquote>Mullá Sádiq-Khurásání, formerly known as Muqaddas, and surnamed by Bahá'u'lláh, Ismu'lláhu'l-Asdaq, who according to the instructions of Siyyid Kázim, had during the last five years been residing in Isfahán and had been preparing the way for the advent of the new Revelation, was also among the first believers who identified themselves with the Message proclaimed by the Báb. As soon as he learned of the arrival of Mullá Husayn in Isfahán, he hastened to meet him. He gives the following account of his first interview, which took place at night in the home of Mírzá Muhammad-'Alíy-i-Nahrí: 'I asked Mullá Husayn to divulge the name of Him who claimed to be the promised</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p254">254</a></center><p>
@@ -141,7 +141,7 @@
 	   Hájí Muhammad-Táhir-i-Málmírí has recorded some of the incidents that used to occur daily in a certain area of Yazd and which often sparked off disturbances involving the large Zoroastrian community there. The following is a summary of his notes:<p>
 	   <blockquote>
 	   The Muslim clergy wielded great power and the government was weak. Every day, they would find a pretext and invent a story against the Zoroastrians. For instance, they would inform the public that a cerain Zoroastrian was seen to be riding his donkey in the presence of Muslims.* It was understood that such an act was an offence, because it was not considered courteous to ride if a Muslim was walking. This accusation would result in the corporal punishment of the victim. Or, they would claim that the colour of the head-dress of a certain Zoroastrian merchant was dark and somewhat resembled the colour of the headdress of the Siyyids.† The colour ought to have been bright yellow. The mass hysteria created as a result of such an incident was so powerful that almost instantly it could bring about an upheaval in the city.<p>
-	   On another day, they would accuse a certain Zoroastrian that he had passed a Muslim in the street but failed to salute him. Or that a certain Muslim had reason to beat up a Zoroastrian, but in the course of being beaten up, the poor Zoroastrian had mustered such audacity as to raise his hand as if intending to defend himself. Such a person would then be punished by the authorities. It was an established ruling
+	   On another day, they would accuse a certain Zoroastrian that he had passed a Muslim in the street but failed to salute him. Or that a certain Muslim had reason to beat up a Zoroastrian, but in the course of being beaten up, the poor Zoroastrian had mustered such audacity as to raise his hand as if intending to defend himself. Such a person would then be punished by the authorities. It was an established ruling 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -186,7 +186,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p264">264</a></center><p>
 	   <hr>
-	   6. <i>God Passes By</i>, pp. 93-4.
+	   6. <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para13">93</a>-4.
 	   </small></td>
 </tr>
 <tr>
@@ -206,7 +206,7 @@
 	   had he heard the utterances of Táhirih addressed to the company of divines, and witnessed their helplessness to refute her proofs in support of her newly found Faith, than he was captivated by her powerful arguments and sheer personality. Although he was not allowed to enter into any discussions, Hakím Masíh was very curious to find out how Táhirih had acquired such eloquence and powers which bordered on the supernatural.<p>
 	   Shaykh Kázim-i-Samandar* has recorded the following in his memoirs:<p>
 	   <blockquote>I met Hakím Masíh who was of Jewish descent. He was the first among the Jews to enter the community of the friends (i.e. Bahá'ís). It surprised me when I discovered that he was friendly, faithful, full of enthusiasm and love; and so said to him, 'There is a large gap between the Faith of Moses and this great Cause, how did you make this long and glorious journey and arrive at this abode?' He said, 'My visit to Baghdád coincided with the time that Táhirih was in that city. Through some circumstances I was present at some of the meetings where she conversed with the divines. I was astonished and awestruck by the way she talked, by the manner in which she conducted her conversations, and by the power of her utterances. I became attracted and began to meditate and decided to investigate this Cause and deepen my knowledge of it. I made some enquiries in Baghdád and later in other places, until I attained my heart's desire.<small><sup>7</sup></small></blockquote>
-	   Some years after meeting Táhirih in Baghdád, Hakím Masíh met Ismu'lláhu'l-Asdaq, a meeting brought about by Providence. The Ismu'lláh had been arrested because of his allegiance to the Faith, put in chains and brought to Tihrán under escort. This cruel act was carried out by order of the Governor of Khurásán who was enforcing an edict issued by no less than eighteen divines of Islám in that province. The Ismu'lláh was forced to take with him his youngest son, Ibn-i-Asdaq, who was a mere child at the time. Two other believers
+	   Some years after meeting Táhirih in Baghdád, Hakím Masíh met Ismu'lláhu'l-Asdaq, a meeting brought about by Providence. The Ismu'lláh had been arrested because of his allegiance to the Faith, put in chains and brought to Tihrán under escort. This cruel act was carried out by order of the Governor of Khurásán who was enforcing an edict issued by no less than eighteen divines of Islám in that province. The Ismu'lláh was forced to take with him his youngest son, Ibn-i-Asdaq, who was a mere child at the time. Two other believers 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p266">266</a></center><p>
@@ -235,7 +235,7 @@
 	   The light of the new Faith of God which shone forth in the heart of Hakím Masíh illumined many more among his coreligionists in Persia. At first, a few embraced the Cause of Bahá'u'lláh in Hamadán and Káshán and soon great numbers from the Jewish community joined the Faith and swelled the ranks of the believers in Persia. There are many Tablets revealed by Bahá'u'lláh in honour of the believers of Jewish background.<p>
 	   <b>Zoroastrians Enter the Faith</b><p>
 	   The introduction and growth of the Cause among the followers of Zoroaster was no less spectacular and far-reaching. The following story is related by 'Abdu'l-Bahá:<p>
-	   <blockquote>...they relate that the possessions of a certain Bábí in Káshán were plundered, and his household scattered and dispersed. They stripped him naked and scourged him, defiled his beard, mounted him face backwards on an ass, and paraded him through the streets and bazaars with the utmost cruelty, to the sound of drums, trumpets, guitars and tambourines. A certain guebre* who knew absolutely naught of the world or its denizens chanced to be seated apart in a corner of a caravansaray. When the clamour of the people rose high he hastened into the street, and, becoming</blockquote>
+	   <blockquote>...they relate that the possessions of a certain Bábí in Káshán were plundered, and his household scattered and dispersed. They stripped him naked and scourged him, defiled his beard, mounted him face backwards on an ass, and paraded him through the streets and bazaars with the utmost cruelty, to the sound of drums, trumpets, guitars and tambourines. A certain guebre* who knew absolutely naught of the world or its denizens chanced to be seated apart in a corner of a caravansaray. When the clamour of the people rose high he hastened into the street, and, becoming</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p268">268</a></center><p>
@@ -254,7 +254,7 @@
 	   		  <center>
 			  		  HAKÍM MASÍH<p>
 					  The first  believer converted to the Faith from the Jewish<br>
-					  community of Persia
+					  community of Persia 
 	   		  </center>
 	   </small>
 	   </td>
@@ -290,7 +290,7 @@
        <td width="70%">
 	   <b><i>Lawh-i-Mánikchí Sáhib</i></b><p>
 	   Mánikchí passed through Baghdád on his way to Persia when Bahá'u'lláh was in that city. He attained His presence there and became His admirer. In later years he maintained friendly contact with Bahá'u'lláh through correspondence. He was assisted in this by Mírzá Abu'l-Fadl, who after embracing the Faith worked as a secretary for Mánikchí for some years. In answer to a letter, Bahá'u'lláh revealed a Tablet for him known as the <i>Lawh-i-Mánikchí Sáhib</i>.<small><sup>10</sup></small> This is mainly revealed in pure Persian,* for the latter was keen to promote the Persian language in its original form. Although Mánikchí did not become a Bahá'í, he remained a sympathetic friend.<p>
-	   From the literary point of view, the Tablet of Bahá'u'lláh to Mánikchí Sáhib is a masterpiece of the pure Persian language. In its lucidity and eloquence, its richness and beauty, it is no less outstanding than other celebrated Tablets revealed either in Arabic or Persian. This Tablet contains some of the choicest utterances of Bahá'u'lláh. The celebrated passage, 'Ye are the fruits of one tree and the leaves of one branch', was revealed in this Tablet.† Bahá'u'lláh here invites the peoples of the world to enter the portals to freedom which have been opened wide through His Revelation, and to drink deep from the springs of knowledge which have welled forth from His utterances. He uses the analogy of an eyelid, a small shutter, which can obstruct the vision, to illustrate that the veil of covetousness can likewise obscure the light of the soul. He likens harsh
+	   From the literary point of view, the Tablet of Bahá'u'lláh to Mánikchí Sáhib is a masterpiece of the pure Persian language. In its lucidity and eloquence, its richness and beauty, it is no less outstanding than other celebrated Tablets revealed either in Arabic or Persian. This Tablet contains some of the choicest utterances of Bahá'u'lláh. The celebrated passage, 'Ye are the fruits of one tree and the leaves of one branch', was revealed in this Tablet.† Bahá'u'lláh here invites the peoples of the world to enter the portals to freedom which have been opened wide through His Revelation, and to drink deep from the springs of knowledge which have welled forth from His utterances. He uses the analogy of an eyelid, a small shutter, which can obstruct the vision, to illustrate that the veil of covetousness can likewise obscure the light of the soul. He likens harsh 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p270">270</a></center><p>
@@ -303,7 +303,7 @@
 <tr>
        <td width="80%">
 	   words to a deadly sword, and a kindly tongue to refreshing food, states that God, the Creator, approves of any process through which the individual may be enabled to shed some of his ignorance and increase his knowledge and understanding, affirms that man will experience peace and tranquillity when he becomes the well-wisher of all that dwell on earth and exhorts the peoples to leave the darkness of enmity and enter the light of unity.<p>
-	   The following is a small portion of the Tablet to Mánikchí which has been translated into English by Shoghi Effendi:<p>
+	   The following is a small portion of the Tablet to Mánikchí which has been translated into English by Shoghi Effendi:<p> 
 	   <blockquote>
 	   The All-Knowing Physician hath His finger on the pulse of mankind. He perceiveth the disease, and prescribeth, in His unerring wisdom, the remedy. Every age hath its own problem, and every soul its particular aspiration. The remedy the world needeth in its present-day afflictions can never be the same as that which a subsequent age may require. Be anxiously concerned with the needs of the age ye live in, and centre your deliberations in its exigencies and requirements.<p>
 	   We can well perceive how the whole human race is encompassed with great, with incalculable afflictions. We see it languishing on its bed of sickness, sore-tried and disillusioned. They that are intoxicated by self-conceit have interposed themselves between it and the Divine and infallible Physician. Witness how they have entangled all men, themselves included, in the mesh of their devices. They can neither discover the cause of the disease, nor have they any knowledge of the remedy. They have conceived the straight to be crooked, and have imagined their friend an enemy.<p>
@@ -318,7 +318,7 @@
 </tr>
 <tr>
        <td>
-	   <b><i>Lawh-i-Haft Pursish</i> (Tablet of Seven Questions)</b><p>
+	   <b><i>Lawh-i-Haft Pursish</i> (Tablet of Seven Questions)</b><p> 
 	   The Council of Zoroastrians which was set up by Mánikchí Sahib consisted of the most prominent Zoroastrians of Yazd. At one time there were nineteen councillors, six of whom became Bahá'ís. As we have already mentioned, Kay-Khusraw-i-Khudádád, the first believer, was among them. Others who joined the Faith were men of learning or people held in high esteem by the community. Notable among them was the renowned Ustád Javán-Mard, the Secretary of the Council. He was a teacher by profession and became a devoted believer. He wrote a letter to Bahá'u'lláh and asked some questions. The <i>Lawh-i-Haft Pursish</i>, in pure Persian, was revealed in his honour. Bahá'u'lláh in this Tablet calls him by a new name, Shír-Mard (Lion of a man). The following is a short extract from the <i>Lawh-i-Haft Pursish</i>, translated by Shoghi Effendi:<p>
 	   <blockquote>O high priests! Ears have been given you that they may hearken unto the mystery of Him Who is the Self-Dependent, and eyes that they may behold Him. Wherefore flee ye? The Incomparable Friend is manifest. He speaketh that wherein lieth salvation. Were ye, O high priests, to discover the perfume of the rose-garden of understanding, ye would seek none other but Him, and would recognize, to His new vesture, the All-Wise and Peerless One, and would turn your eyes from the world and all who seek it, and would arise to help Him...Whatsoever hath been announced in the Books hath been revealed and made clear. From every direction the signs have been manifested. The Omnipotent One is calling, in this Day, and announcing the appearance of the Supreme Heaven.<small><sup>12</sup></small></blockquote>
 	   Shír-Mard was the first Zoroastrian Bahá'í to be buried instead of having his body disposed of in the Dakhmih* as was
@@ -349,7 +349,7 @@
 </table>
 <p>
 <table border="0" cellspacing="2" cellpadding="2" width="" bgcolor="" align="center">
-   <tr>
+   <tr>   
        <td valign="top">
 	   <H1 ALIGN=center><a name="facingp274"></a>
 	   	   <img src="i/274.jpg" width="425" height="300" border="0" align="middle" ALT="THE HOUSE OF 'ÚDÍ KHAMMÁR IN 'AKKÁ">
@@ -390,7 +390,7 @@
        <td>
 	   	   <FORM ACTION="p221-252Ch11.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -398,12 +398,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p275-307Ch13.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
