--- a/Baha'i/Others/ROB/V3/p275-307Ch13.html
+++ b/Baha'i/Others/ROB/V3/p275-307Ch13.html
@@ -46,7 +46,7 @@ p. 276 footnote, changed CLXV to CLXVI.
        <td VALIGN=top><small><center><a name="p275">275</a></center><p>
 	   * see vol. 1, <a href="../V1/p153-197Ch10.html">ch. 10</a>.<p>
 	   <hr>
-	   1. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 216.
+	   1. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para282">p. 216</a>.
 	   <hr>
 	   <a href="../../../Baha/KA/Cover.html">The Kitáb-i-Aqdas</a>
 	   </small></td>
@@ -62,7 +62,7 @@ p. 276 footnote, changed CLXV to CLXVI.
        <td VALIGN=top><small><center><a name="p276">276</a></center><p>
 	   * The following passages in <i>Gleanings</i> are from the <i>Kitáb-i-Aqdas</i>: <a href="../../../Baha/GL/p003-346.html#XXXVII">XXXVII</a>, <a href="../../../Baha/GL/p003-346.html#LVI">LVI</a>, <a href="../../../Baha/GL/p003-346.html#LXX">LXX</a>, <a href="../../../Baha/GL/p003-346.html#LXXI">LXXI</a>, <a href="../../../Baha/GL/p003-346.html#LXXII">LXXII</a>, <a href="../../../Baha/GL/p003-346.html#XCVIII">XCVIII</a>, <a href="../../../Baha/GL/p003-346.html#CV">CV</a>, <a href="../../../Baha/GL/p003-346.html#CLV">CLV</a>, <a href="../../../Baha/GL/p003-346.html#CLIX">CLIX</a> and <a href="../../../Baha/GL/p003-346.html#CLXVI">CLXVI</a>.<p>
 	   <hr>
-	   2. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 216.
+	   2. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para282">p. 216</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -138,7 +138,7 @@ p. 276 footnote, changed CLXV to CLXVI.
        <td></td>
        <td VALIGN=top><small><center><a name="p282">282</a></center><p>
 	   <hr>
-	   6. <i>God Passes By</i>, p. 214.<p>
+	   6. <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para279">p. 214</a>.<p>
 	   7. Quoted in <i>Principles of Bahá'í Administration</i>, p. 7.
 	   </small></td>
 </tr>
