--- a/Baha'i/Others/ROB/V3/p308-321Ch14.html
+++ b/Baha'i/Others/ROB/V3/p308-321Ch14.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p275-307Ch13.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p322-342Ch15.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -52,7 +52,7 @@
 </tr>
 <tr>
        <td>
-	   <blockquote>again have been fought, and conferences without number have met and deliberated. Treaties, pacts and covenants have been painstakingly negotiated, concluded and revised. Systems of government have been patiently tested, have been continually recast and superseded. Economic plans of reconstruction have been carefully devised, and meticulously executed. And yet crisis has succeeded crisis, and the rapidity with which a perilously unstable world is declining has been correspondingly accelerated. A yawning gulf threatens to involve in one common disaster both the satisfied and dissatisfied nations, democracies and dictatorships, capitalists and wage-earners, Europeans and Asiatics, Jew and Gentile, white and coloured. An angry Providence, the cynic might well observe, has abandoned a hapless planet to its fate, and fixed irrevocably its doom. Sore-tried and disillusioned, humanity has no doubt lost its orientation, and would seem to have lost as well its faith and hope. It is hovering, unshepherded and visionless, on the brink of disaster. A sense of fatality seems to pervade it. An ever-deepening gloom is settling on its fortunes as she recedes further and further from the outer fringes of the darkest zone of its agitated life and penetrates its very heart.<small><sup>2</sup></small></blockquote>
+	   <blockquote>again have been fought, and conferences without number have met and deliberated. Treaties, pacts and covenants have been painstakingly negotiated, concluded and revised. Systems of government have been patiently tested, have been continually recast and superseded. Economic plans of reconstruction have been carefully devised, and meticulously executed. And yet crisis has succeeded crisis, and the rapidity with which a perilously unstable world is declining has been correspondingly accelerated. A yawning gulf threatens to involve in one common disaster both the satisfied and dissatisfied nations, democracies and dictatorships, capitalists and wage-earners, Europeans and Asiatics, Jew and Gentile, white and coloured. An angry Providence, the cynic might well observe, has abandoned a hapless planet to its fate, and fixed irrevocably its doom. Sore-tried and disillusioned, humanity has no doubt lost its orientation, and would seem to have lost as well its faith and hope. It is hovering, unshepherded and visionless, on the brink of disaster. A sense of fatality seems to pervade it. An ever-deepening gloom is settling on its fortunes as she recedes further and further from the outer fringes of the darkest zone of its agitated life and penetrates its very heart.<small><sup>2</sup></small></blockquote> 
 	   The gloom described almost fifty years ago by Shoghi Effendi has deepened even further, and today the world is moving dangerously and at an alarming speed towards the brink of a catastrophe. But, alas, the generality of mankind, its leaders, its intellectuals, its seers and philosophers, have not as yet discovered the real cause for such a revolution in the life of man on this planet. Bahá'u'lláh describes the reason in these words:<p>
 	   <blockquote>A new life is, in this age, stirring within all the peoples of the earth; and yet none hath discovered its cause, or perceived its motive.<small><sup>3</sup></small></blockquote>
 	   To appreciate the reason for the turmoil of this age, the breaking up of the old order and the derangement of the
@@ -80,7 +80,7 @@
 	   <blockquote>The world is in travail and its agitation waxeth day by day. Its face is turned towards waywardness and unbelief. Such shall be its plight that to disclose it now would not be meet and seemly. Its perversity will long continue. And when the appointed hour is come, there shall suddenly appear that which shall cause the limbs of mankind to quake. Then and only then will the Divine Standard be unfurled and the Nightingale of Paradise warble its melody.<small><sup>4</sup></small></blockquote>
 	   In another instance, Bahá'u'lláh writes:<p>
 	   <blockquote>After a time, all the governments on earth will change. Oppression will envelop the world. And following a universal convulsion, the sun of justice will rise from the horizon of the unseen realm.<small><sup>5</sup></small></blockquote>
-	   Shoghi Effendi describes the conception of the institutions of the Faith within the womb of human society in these words:<p>
+	   Shoghi Effendi describes the conception of the institutions of the Faith within the womb of human society in these words:<p> 
 	   <blockquote>
 	   Resplendent as has been the Age that has witnessed the inception of the Mission with which Bahá'u'lláh has been entrusted, the interval which must elapse ere that Age yields its choicest fruit must, it is becoming increasingly apparent, be overshadowed by such moral and social gloom as can alone prepare an unrepentant humanity for the prize she is destined to inherit.<p>
 	   Into such a period we are now steadily and irresistibly moving. Amidst the shadows which are increasingly gathering about us we can faintly discern the glimmerings of Bahá'u'lláh's unearthly sovereignty appearing fitfully on the horizon of history...<p>
@@ -127,7 +127,7 @@
 	   must seize the limbs of mankind will, on the one hand, pave the way for the establishment of the Lesser Peace,* and on the other, witness the evolution of the Bahá'í national and local institutions of the Faith.<p>
 	   The blessings which the Lesser Peace will confer upon humanity will enable it to produce a new political structure freeing humanity from the curse of war. The social and humanitarian teachings and principles of Bahá'u'lláh which have already become the spirit of the age and which are being pursued by the enlightened peoples of the world will become incorporated in this political structure. Without being conscious of their origin, mankind will increasingly adopt these social teachings in every aspect of its life. These principles include the establishment of a world federated system, a world commonwealth, a world legislature, a world government backed by an international force, a world language, and other institutions as enunciated by Bahá'u'lláh in His teachings. The energies released by the Revelation of Bahá'u'lláh over a hundred years ago will to an increasing degree so penetrate within human society as to leave no other option for humanity but to incorporate such teachings as the equality of the sexes, compulsory education, the abolition of extremes of poverty and wealth and similar ones in all its institutions. This is already evidenced by the application of these Bahá'í principles within many progressive movements in the world.<p>
 	   This new form of government must emerge from amidst the ruins of a doomed and dilapidated present-day order, and govern humanity until such time as the nascent institutions of the Faith of Bahá'u'lláh will have attained their state of maturity. It is then that the Bahá'í World Order will be established in its great glory and this vision of Shoghi Effendi stretching far into the future will be realized.<p>
-	   <blockquote>To the general character, the implications and features of</blockquote>
+	   <blockquote>To the general character, the implications and features of</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p314">314</a></center><p>
@@ -160,7 +160,7 @@
 	   7. <i>The Promised Day Is Come</i>, pp. 128- 9.<p>
 	   8. <i>Synopsis</i>, p. 13.<p>
 	   <hr>
-	   ["The Lord hath ordained..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para30">&para;30</a>
+	   ["The Lord hath ordained..."] <i>God Passes By</i>, <a href="../../../SE/GPB/p321-401FourthPeriod.html#para17">p. 332</a>; <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para30">&para;30</a>	   
 	   </small></td>
 </tr>
 <tr>
@@ -170,7 +170,7 @@
 	   <blockquote>
 	   The Great Being saith: The heaven of divine wisdom is illumined with the two luminaries of consultation and compassion. Take ye counsel together in all matters, inasmuch as consultation is the lamp of guidance which leadeth the way, and is the bestower of understanding.<small><sup>9</sup></small><p>
 	   Consultation bestoweth greater awareness and transmuteth conjecture into certitude. It is a shining light which, in a dark world, leadeth the way and guideth. For everything there is and will continue to be a station of perfection and maturity. The maturity of the gift of understanding is made manifest through consultation.<small><sup>10</sup></small><p>
-	   In all things it is necessary to consult. This matter should be forcibly stressed by thee, so that consultation may be
+	   In all things it is necessary to consult. This matter should be forcibly stressed by thee, so that consultation may be 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -178,7 +178,7 @@
 	   * For more information see <i>Principles of Bahá'í Administration</i>.<p>
 	   † see pp. <a href="p032-051Ch02.html#p49">49</a>-51.<p>
 	   <hr>
-	   9. Lawh-i-Maqsúd, in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para479">p. 168</a>.<p>
+	   9. Lawh-i-Maqsúd, in <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para479">p. 168</a>.<p> 
 	   10. <i>Consultation: A Compilation</i>, p. 3.
 	   </small></td>
 </tr>
@@ -214,8 +214,8 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p319">319</a></center><p>
-	   <hr>
-	   14. Shoghi Effendi, <i>God Passes By</i>, p. 332.<p>
+	   <hr>	   
+	   14. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p321-401FourthPeriod.html#para18">p. 332</a>.<p> 
 	   15. <i>Tablets of Bahá'u'lláh</i>, pp. <a href="../../../Baha/TOB/p001-270TOB.html#para362">128</a>-9.<p>
 	   <hr>
 	   ["This passage..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p089-102Supp.html#p91">p. 91</a>
@@ -244,7 +244,7 @@
        <td>
 	   	   <FORM ACTION="p275-307Ch13.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -252,12 +252,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p322-342Ch15.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
