--- a/Baha'i/Others/ROB/V3/p371-399Ch17.html
+++ b/Baha'i/Others/ROB/V3/p371-399Ch17.html
@@ -45,7 +45,7 @@
        <td VALIGN=top><small><center><a name="p371">371</a></center><p>
        * The Covenant of Bahá'u'lláh and its Centre, 'Abdu'l-Bahá, will be further discussed in the <a href="../V4/p463-485Index.html#Covenant">next volume</a>.<p>
 	   <hr>
-	   1. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 221.<p>
+	   1. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para297">p. 221</a>.<p>
 	   2. <i>Synopsis</i>, p. 27.<p>
 	   3. <i>ibid</i>. p. 24.<p>
 	   <hr>
@@ -103,7 +103,7 @@
 	   <hr>
 	   6. <i>Synopsis</i>, p. 23.<p>
 	   <hr>
-   	   ["Whoso interpreteth..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para105">&para;105</a>; <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para190">p. 130</a>
+   	   ["Whoso interpreteth..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para105">&para;105</a>; <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para190">p. 130</a>	   
 	   </small></td>
 </tr>
 <tr>
@@ -180,7 +180,7 @@
 	   11. <i>Synopsis</i>, p. 16.<p>
 	   12. Lawh-i-Tibb (Tablet of Medicine) in <i>Majmú'iy-i-Alváh</i>.<p>
 	   <hr>
-   	   ["Verily, we behold you..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para53">&para;53</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#LXXII">LXXII</a>; <p>
+   	   ["Verily, we behold you..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para53">&para;53</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#LXXII">LXXII</a>; <p>	   
 	   </small></td>
 </tr>
 <tr>
@@ -240,7 +240,7 @@
 	   19. 28 March 1953, quoted in <i>The Individual and Teaching</i>, p. 32.<p>
 	   20. <i>Synopsis</i>, p. 14.<p>
 	   <hr>
-   	   ["Be not dismayed..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para38">&para;38</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#LXXI">LXXI</a>
+   	   ["Be not dismayed..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para38">&para;38</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#LXXI">LXXI</a>	   
 	   </small></td>
 </tr>
 <tr>
@@ -412,8 +412,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p393">393</a></center><p>
 	   <hr>
-	   28. <i>God Passes By</i>, pp. 93-4.<p>
-	   29. <i>ibid</i>. p. 216.
+	   28. <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para13">93</a>-4.<p>
+	   29. <i>ibid</i>. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para282">p. 216</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -427,7 +427,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p394">394</a></center><p>
 	   <hr>
-   	   ["The peoples of the world..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para39">&para;39</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#para277">LXXI</a><p>
+   	   ["The peoples of the world..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para39">&para;39</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#para277">LXXI</a><p>	   	   
 	   </small></td>
 </tr>
 <tr>
@@ -442,7 +442,7 @@
 	   <hr>
 	   30. <i>Synopsis</i>, pp. 14-15.<p>
 	   <hr>
-   	   ["Say: Rejoice not..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para40">&para;40</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#para278">LXXI</a>
+   	   ["Say: Rejoice not..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para40">&para;40</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#para278">LXXI</a>	   
 	   </small></td>
 </tr>
 <tr>
@@ -459,7 +459,7 @@
        <td VALIGN=top><small><center><a name="p396">396</a></center><p>
        * For a discussion of attachment to the next world see vol. 2, pp. <a href="../V2/p029-054Ch02.html#p36">36</a>-43.<p>
 	   <hr>
-   	   ["O peoples of the earth..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para54">&para;54</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#para280">LXXII</a>
+   	   ["O peoples of the earth..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para54">&para;54</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#para280">LXXII</a>   
        </small></td>
 </tr>
 <tr>
@@ -474,7 +474,7 @@
 	   <hr>
 	   31. <i>Synopsis</i>, pp. 16-17.<p>
 	   <hr>
-   	   ["Know ye from what heights..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para55">&para;55</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#para281">LXXII</a>
+   	   ["Know ye from what heights..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para55">&para;55</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#para281">LXXII</a>	   
        </small></td>
 </tr>
 <tr>
@@ -514,7 +514,7 @@
 	   34. <i>Má'idiy-i-Ásamání</i>, vol. 9, p. 26.<p>
 	   <hr>
 	   ["Immerse yourselves in the ocean..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para182">&para;182</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para274">LXX</a><p>
-	   ["Say: This is the infallible..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para183">&para;183</a>; ; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para275">LXX</a>;
+	   ["Say: This is the infallible..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para183">&para;183</a>; ; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para275">LXX</a>;	   	   
        </small></td>
 </tr>
 </table>
