--- a/Baha'i/Others/ROB/V3/p400-421Ch18.html
+++ b/Baha'i/Others/ROB/V3/p400-421Ch18.html
@@ -361,7 +361,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p420">420</a></center><p>
 	   <hr>
-	   13. <i>God Passes By</i>, pp. 195-6.
+	   13. <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para232">195</a>-6.
 	   </small></td>
 </tr>
 <tr>
@@ -371,7 +371,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p421">421</a></center><p>
 	   <hr>
-	   14. <i>Gleanings</i>, XLV.
+	   14. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para182">XLV</a>.
 	   </small></td>
 </tr>
 
