--- a/Baha'i/Others/ROB/V3/p422-432Apndx_I.html
+++ b/Baha'i/Others/ROB/V3/p422-432Apndx_I.html
@@ -183,7 +183,7 @@
        <td VALIGN=top><small><center><a name="p432">432</a></center><p>
 	   * see vol. 1, p. <a href="../V1/p257-282Ch16.html#p268">268</a>, for another important incident on that day. (A.T.)<p>
 	   <hr>
-	   2. <i>God Passes By</i>, p. 276.
+	   2. <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para85">p. 276</a>.
 	   <hr>
 	   [Naw-Rúz] <i><a href="../../../Baha/KA/p258-296Index.html#Naw-Rúz">The Kitáb-i-Aqdas</a></i>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para225">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../V4/p463-485Index.html#Naw-Rúz">4</a><p>
 	   </small></td>
