--- a/Baha'i/Others/ROB/V3/p449-454Biblio.html
+++ b/Baha'i/Others/ROB/V3/p449-454Biblio.html
@@ -129,7 +129,7 @@
 	   SHOGHI EFFENDI. <i>The Advent of Divine Justice</i>. First published 1939. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1963.<p>
 	   <blockquote>
 	   <i>Bahá'í Administration</i>. 5th rev. edn. Wilmette, Illinois: Bahá'í Publishing Trust, 1968.<p>
-	   <i>God Passes By</i>. Wilmette, Illinois: Bahá'í Publishing Trust, 1944.<p>
+	   <a href="../../../SE/GPB/Cover.html"><i>God Passes By</i></a>. Wilmette, Illinois: Bahá'í Publishing Trust, 1944.<p>
 	   <i>Messages to America</i>. Selected Letters and Cablegrams Addressed to the Bahá'ís of North America 1932-1946. Wilmette, Illinois: Bahá'í Publishing Committee, 1947.<p>
 	   <i>The Promised Day is Come</i>. First published 1941. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1961.<p>
 	   <i>The World Order of Bahá'u'lláh</i>. First published 1938. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1955.<p>
